tests/e2e/service_call_as_output4.story
a = uuid generate as t
